Tokio-compiler/docs/grammar.ebnf
(* Tokio Language Grammar in EBNF *)

Program       ::= { Function | Statement } ;

Function      ::= "func" Identifier "(" [ Parameters ] ")" "{" { Statement } "}" ;

Parameters    ::= Identifier { "," Identifier } ;

Statement     ::= VarDecl
                | Assignment
                | IfStatement
                | WhileStatement
                | ReturnStatement
                | ExpressionStatement ;

VarDecl       ::= "var" Identifier "=" Expression ";" ;
Assignment    ::= Identifier "=" Expression ";" ;
ReturnStatement ::= "return" Expression ";" ;
ExpressionStatement ::= Expression ";" ;

IfStatement   ::= "if" "(" Expression ")" "{" { Statement } "}" [ "else" "{" { Statement } "}" ] ;
WhileStatement ::= "while" "(" Expression ")" "{" { Statement } "}" ;

Expression    ::= LogicalOr ;
LogicalOr     ::= LogicalAnd { "||" LogicalAnd } ;
LogicalAnd    ::= Equality { "&&" Equality } ;
Equality      ::= Relational { ("==" | "!=") Relational } ;
Relational    ::= Additive { ("<" | "<=" | ">" | ">=") Additive } ;
Additive      ::= Multiplicative { ("+" | "-") Multiplicative } ;
Multiplicative ::= Unary { ("*" | "/" | "%") Unary } ;
Unary         ::= [ "!" | "-" ] Primary ;
Primary       ::= IntegerLiteral
                | FloatLiteral
                | StringLiteral
                | BooleanLiteral
                | Identifier
                | FunctionCall
                | "(" Expression ")" ;

FunctionCall  ::= Identifier "(" [ Arguments ] ")" ;
Arguments     ::= Expression { "," Expression } ;

IntegerLiteral ::= Digit { Digit } ;
FloatLiteral   ::= Digit { Digit } "." Digit { Digit } ;
StringLiteral  ::= "\"" { Character } "\"" ;
BooleanLiteral ::= "true" | "false" ;
Identifier     ::= Letter { Letter | Digit | "_" } ;

Digit          ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
Letter         ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
                 | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
                 | "u" | "v" | "w" | "x" | "y" | "z"
                 | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
                 | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
                 | "U" | "V" | "W" | "X" | "Y" | "Z" ;
Character      ::= any printable character except "\"" ;
